Study aspiration point approaches