@@ -1,31 +1,31 @@
 package org.nextsus.cso.auto;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import org.nextsus.cso.auto.algorithm.AutoNSGAIICSOWithConstraints;
-import org.nextsus.cso.auto.util.RunTimeFilteringUnfeasibleSolutionsChartObserver;
+import org.nextsus.cso.auto.algorithm.AutoNSGAIICSO;
 import org.nextsus.cso.solution.BinaryCSOSolution;
 import org.uma.jmetal.auto.autoconfigurablealgorithm.AutoNSGAII;
 import org.uma.jmetal.component.algorithm.EvolutionaryAlgorithm;
+import org.uma.jmetal.solution.doublesolution.DoubleSolution;
 import org.uma.jmetal.util.JMetalLogger;
 import org.uma.jmetal.util.fileoutput.SolutionListOutput;
 import org.uma.jmetal.util.fileoutput.impl.DefaultFileOutputContext;
 import org.uma.jmetal.util.observer.impl.EvaluationObserver;
+import org.uma.jmetal.util.observer.impl.RunTimeChartObserver;
 
 /**
  * Class configuring NSGA-II using arguments in the form <key, value> and the {@link AutoNSGAII} class.
  *
  * @author Antonio J. Nebro (ajnebro@uma.es)
  */
-public class NSGAIIWithConstraintsConfiguredFromAParameterString {
+public class NSGAIRunner {
   public static void main(String[] args) {
     String referenceFrontFileName = "ReferenceFront.csv" ;
 
     String[] parameters =
         ("--problemName org.nextsus.cso.problem.StaticCSO "
                 + "--referenceFrontFileName "+ referenceFrontFileName + " "
-                + "--maximumNumberOfEvaluations 25000 "
+                + "--maximumNumberOfEvaluations 35000 "
                 + "--algorithmResult population "
                 + "--populationSize 100 "
                 + "--offspringPopulationSize 100 "
@@ -42,7 +42,8 @@ public class NSGAIIWithConstraintsConfiguredFromAParameterString {
             .split("\\s+");
 
 
-    var autoNSGAII = new AutoNSGAIICSOWithConstraints();
+    //var autoNSGAII = new AutoNSGAIICSOWithConstraints();
+    var autoNSGAII = new AutoNSGAIICSO();
     autoNSGAII.parseAndCheckParameters(parameters);
 
     AutoNSGAII.print(autoNSGAII.fixedParameterList);
@@ -50,14 +51,13 @@ public class NSGAIIWithConstraintsConfiguredFromAParameterString {
 
     EvolutionaryAlgorithm<BinaryCSOSolution> nsgaII = autoNSGAII.create();
     EvaluationObserver evaluationObserver = new EvaluationObserver(100);
-
+    RunTimeChartObserver<DoubleSolution> runTimeChartObserver =
+        new RunTimeChartObserver<>(
+           "NSGA-II", 80, 100,null);
     List<List<Double>> referencePoints;
     referencePoints = new ArrayList<>();
-    referencePoints.add(Arrays.asList(0.01, -1400.0));
-    var runTimeChartObserver =
-        new RunTimeFilteringUnfeasibleSolutionsChartObserver<>(
-           "NSGA-II", 80, 100,null);
-    runTimeChartObserver.setReferencePoints(referencePoints);
+    referencePoints.add(List.of(0.006, -2400.0));
+    runTimeChartObserver.setReferencePoins(referencePoints);
 
     nsgaII.getObservable().register(evaluationObserver);
     nsgaII.getObservable().register(runTimeChartObserver);
@@ -67,8 +67,8 @@ public class NSGAIIWithConstraintsConfiguredFromAParameterString {
     JMetalLogger.logger.info("Total computing time: " + nsgaII.getTotalComputingTime()); ;
 
     new SolutionListOutput(nsgaII.getResult())
-        .setVarFileOutputContext(new DefaultFileOutputContext("VAR.csv", ","))
-        .setFunFileOutputContext(new DefaultFileOutputContext("FUN.csv", ","))
+        .setVarFileOutputContext(new DefaultFileOutputContext("VAR.NSGAII.35k.csv", ","))
+        .setFunFileOutputContext(new DefaultFileOutputContext("FUN.NSGAII.35k.csv", ","))
         .print();
   }
 }
